Alterando tamanho da fonte

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reddit",
+  "homepage": "https://gustavoliveira94.github.io/React-Api-Reddit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,7 +13,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
